tests/analysis/bad/alias_self_loop.pepa
% This model should fail because it contains a self loop on P

r1 = 1.0 ;

P  = (a, r1) . S ;
S  = P ; // S = P + P ;
Q  = (a, r1) . Q2 ;
Q2 = (b, r1) . Q ;

( P <> Q )
